# RAG-Langchain

./: .env  .gitignore  pyproject.toml  requirements.txt
AdvancedChunking/: langchain.txt  semanticchunking.ipynb
DataIngest/: csvexcelparsing.ipynb  databaseparsing.ipynb  dataingestion.ipynb  dataparsingdoc.ipynb  jsonparsing.ipynb
DataIngest/data/databases/: company.db
DataIngest/data/docx/: Antennas.docx
DataIngest/data/json_files/: company_data.json  user_events.jsonl
DataIngest/data/structured_files/: sample_data.xlsx
DataIngest/data/text_files/: sample1.txt  sample2.txt
HybridSearch/: densesparse.ipynb  langchain.txt  mmr.ipynb  reranking.ipynb
MultimodalRAG/: multimodal.ipynb
QueryEnhancement/: HyDE.ipynb  langchain_crewai.txt  querydecomposition.ipynb  queryexpansion.ipynb
QueryEnhancement/chroma_db/: chroma.sqlite3
QueryEnhancement/langchain_crewai_hyde_chain/: chroma.sqlite3
VectorDatabases/: 2-faiss.ipynb  chromadb.ipynb  datastax.ipynb  doc_0.txt  doc_1.txt  doc_2.txt  inmemoryvectorstore.ipynb
VectorDatabases/chroma_db/: chroma.sqlite3
VectorDatabases/faiss_index/: index.faiss  index.pkl
VectorEmbeddingsandDatabases/: embedding.ipynb  groq.ipynb  openaiembeddings.ipynb
